# libipaca

./: CMakeLists.txt  LICENSE.txt  README.txt
cmake/macros/: libipacaConfig.cmake.in
cmake/scripts/: coverage.sh.in
doc/: Doxyfile.cmake
include/ipaca/: Error.hpp  Mercury7.hpp  Mercury7Impl.hpp  Spectrum.hpp  Stoichiometry.hpp  StoichiometryView.hpp  Traits.hpp  Types.hpp  config.hpp.cmake
src/: CMakeLists.txt  Mercury7.cpp  Mercury7Impl.cpp  Spectrum.cpp  Stoichiometry.cpp  Traits.cpp
test/: CMakeLists.txt  Mercury7-test.cpp  Mercury7Impl-test.cpp  Stoichiometry-test.cpp  StoichiometryView-test.cpp  create_test.py
